Issue #25339: PYTHONIOENCODING now has priority over locale in setting the error handler for stdin and stdout.